# cookiecutter_titanic

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  apresentacao.md  dvc.yaml  features.py  params.yaml  prompt.md  pyproject.toml
.dvc/: config
conf/: base.yaml  logging.yaml
docs/: governance.md  weekly.md
notebooks/: 00_extracao_campos_xml_pricing_polars.ipynb  01_eda_forense_benner_processos.ipynb  01_eda_forense_juridico.ipynb  01_feature_store_simulacoes_proposta.ipynb  02_feature_engineering_benner_processos.ipynb  02_feature_engineering_juridico.ipynb  02_validacao_baseline_feature_selection_proposta.ipynb  04_eda_financeira_integrada_benner_deeplegal.ipynb  05_eda_financeira_valorajuizado_benner_deeplegal_completa.ipynb  05_eda_financeira_valorajuizado_target_banco_ganhou.ipynb  06_feature_engineering_target_banco_ganhou.ipynb  07_01_prepare_early_stage_abt.ipynb  07_02_historical_features_no_leakage.ipynb  07_03A_walk_forward_baseline_early_stage.ipynb  07_03B_encoders_feature_engine_early_stage.ipynb  07_03C_catboost_native_early_stage.ipynb  07_03C_lightgbm_xgboost_category_encoders_early_stage.ipynb  07_03D_lightgbm_xgboost_text_early_stage.ipynb  07_03E_graph_node2vec_features_early_stage.ipynb  07_03F_graph_node2vec_fast_features_early_stage.ipynb  07_03G_hybrid_all_features_early_stage.ipynb  07_03_walk_foward_baseline_early_stage_part1.ipynb  07_04_feature_selection_hyperparameter_tuning.ipynb  07_05_calibracao_venn_abers_early_stage.ipynb  07_modelagem_baseline_target_banco_ganhou.ipynb  README.md  prompt  (+5 more)
(+17 files in other folders)
